Fixing aligning

--- a/styles/base.css
+++ b/styles/base.css
@@ -175,8 +175,7 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: 5px 5px;
+    height: 200px;
     padding: 10px;
 }
 
@@ -217,6 +216,7 @@ html, body {
     display: flex;
     padding: 10px;
     margin: 15px 0px;
+    justify-content: center;
 }
 
 .imac__image {
@@ -259,6 +259,7 @@ html, body {
 .option_list {
     margin-top: 20px;
     margin-bottom: 40px;
+    height: 80px;
 }
 
 .options {
